--- a/SystemPicker.Tests/SystemPicker.Tests.csproj
+++ b/SystemPicker.Tests/SystemPicker.Tests.csproj
@@ -24,4 +24,19 @@
       <ProjectReference Include="..\SystemPicker.RedditBot\SystemPicker.RedditBot.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <EmbeddedResource Update="Matcher\TestPosts.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>TestPosts.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Matcher\TestPosts.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>TestPosts.resx</DependentUpon>
+      </Compile>
+    </ItemGroup>
+
 </Project>
